syntax = "proto3";

package snapshot;

import "google/protobuf/any.proto";

option go_package = ".;stats";

// İlk servis: Snapshot key'lerini döner
service SnapshotKeyService {
  rpc GetSnapshotKeys (Empty) returns (SnapshotKeyList);
}

// İkinci servis: Belirli bir key için kaynakları döner
service SnapshotResourceService {
  rpc GetSnapshotResources (SnapshotKey) returns (SnapshotResourceList);
}

message Empty {}

message SnapshotKey {
  string key = 1;
}

message Snapshot {
  string key = 1;
  google.protobuf.Any data = 2;
}

message SnapshotList {
  repeated Snapshot snapshots = 1;
}

message SnapshotKeyList {
  repeated string keys = 1;
}

message SnapshotResource {
  string type = 1;
  google.protobuf.Any data = 2;
}

message SnapshotResourceList {
  repeated SnapshotResource resources = 1;
}